Changelog
=========

2.3.2 (unreleased)
------------------

* ...

Bethel Changes
--------------

* add interfaces for VersionedAssets and exceptions (INotViewable, 
  INoDefaultDocument)

* add IContainerIsDefaultContent interface

2.3.1 (2010/12/20)
------------------

* Update interface documentation.

* Remove no longer used interfaces.

* Update interface inheritance tree to match content one.

2.3 (2010-10-07)
----------------

* Subscription interfaces moved to silva.app.subscriptions.

* Authorization management API have been updated.

* Content interfaces have been updated and documentation improved.

* Events have been added for publication actions.

2.3b1 (2010-10-15)
------------------

* Remove unused interfaces,

* Add missing interfaces for contents.

2.2 (2010-03-31)
----------------

* Clean some interface that where including ``self``.

2.2b1 (2010-01-22)
------------------

* Initial release after splitting from Silva core.