@@ -14,6 +14,8 @@ Bethel Changes
 
 * add IContainerIsDefaultContent interface
 
+* add interfaces for contentlayout, and layouteditorlayer interface
+
 2.3.1 (2010/12/20)
 ------------------
 
